fix: long express checkout overflow (#22)

--- a/styles/express-checkout.scss
+++ b/styles/express-checkout.scss
@@ -88,7 +88,6 @@ $sticky-checkout-padding: 20px;
 
   @include breakpoint('md') {
     height: 50vh;
-    display: flex;
     align-items: center;
   }
 
